--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
                 
-                <span>About</span>
+                <span>About Me</span>
             </a>
         </li>
         
