--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     
     <h3 class="article-subtitle">
-        In December 2021, we opened up our [framework of Class-Incremental Learning](https://github.com/G-U-N/PyCIL).
+        In December 2021, we opened up our framework of Class-Incremental Learning.
     </h3>
     
 
