--- a/index.html
+++ b/index.html
@@ -211,8 +211,12 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/posts/2021-12-24/">
-                
-                    <img src="/2021-12-24.jpg" loading="lazy" alt="Featured image of post PyCIL: A Python Toolbox for Class-Incremental Learning" />
+                <img src="/posts/2021-12-24/surface_hu958d513eeefe5556a31d065479ecc5ac_14205_800x0_resize_q75_box.jpg"
+                        srcset="/posts/2021-12-24/surface_hu958d513eeefe5556a31d065479ecc5ac_14205_800x0_resize_q75_box.jpg 800w, /posts/2021-12-24/surface_hu958d513eeefe5556a31d065479ecc5ac_14205_1600x0_resize_q75_box.jpg 1600w"
+                        width="800" 
+                        height="533" 
+                        loading="lazy"
+                        alt="Featured image of post PyCIL: A Python Toolbox for Class-Incremental Learning" />
                 
             </a>
         </div>
